--- a/signup.html
+++ b/signup.html
@@ -73,7 +73,7 @@
     </style>
 
     <!-- Custom styles for this template -->
-    <link href="./css/signing.css" rel="stylesheet" />
+    <link href="css/signing.css" rel="stylesheet" />
   </head>
   <body class="text-center">
     <main class="form-signin w-100 m-auto">
