--- a/signup.html
+++ b/signup.html
@@ -73,14 +73,14 @@
     </style>
 
     <!-- Custom styles for this template -->
-    <link href="css/signing.css" rel="stylesheet" />
+    <link href="..css/signing.css" rel="stylesheet" />
   </head>
   <body class="text-center">
     <main class="form-signin w-100 m-auto">
       <form method="post" action="/">
         <img
           class="mb-4"
-          src="img/fepe_logo.png"
+          src="..img/fepe_logo.png"
           alt=""
           width="98"
           height="57"
