--- a/signup.html
+++ b/signup.html
@@ -80,7 +80,8 @@
       <form method="post" action="/">
         <img
           class="mb-4"
-          src="../public/img/fepe_logo.png"
+          src="fepeappdiet
+/public/img/fepe_logo.png"
           alt=""
           width="98"
           height="57"
