--- a/signup.html
+++ b/signup.html
@@ -80,8 +80,7 @@
       <form method="post" action="/">
         <img
           class="mb-4"
-          src="fepeappdiet
-/public/img/fepe_logo.png"
+          src="img/fepe_logo.png"
           alt=""
           width="98"
           height="57"
